apps/auction-frontend/deployment-v9.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auction-frontend-v9
  namespace: bidly
  labels:
    app.kubernetes.io/name: auction-frontend
    app.kubernetes.io/version: v9
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: auction-frontend
      app.kubernetes.io/version: v9
  template:
    metadata:
      labels:
        app.kubernetes.io/name: auction-frontend
        app.kubernetes.io/version: v9
    spec:
      containers:
        - name: auction-frontend
          image: aididalam/bidly-frontend-auction:main-9
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
