apps/auction-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auction-frontend
  namespace: bidly
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: auction-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: auction-frontend
    spec:
      containers:
        - name: auction-frontend
          image: aididalam/bidly-frontend-auction:main-5
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
