apps/auction-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auction-frontend
  namespace: bidly
spec:
  selector:
    app.kubernetes.io/name: auction-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
