apps/auction-frontend/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: auction-frontend
  namespace: bidly
spec:
  host: auction-frontend
  subsets:
    - name: v9
      labels:
        app.kubernetes.io/version: v9
    - name: v11
      labels:
        app.kubernetes.io/version: v11
