apps/auction-frontend/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: auction-frontend
  namespace: bidly
spec:
  hosts:
    - auction-frontend
  http:
    - route:
        - destination:
            host: auction-frontend
            subset: v9
          weight: 100
        - destination:
            host: auction-frontend
            subset: v11
          weight: 0
